--- a/blog_app/static/css/blog.css
+++ b/blog_app/static/css/blog.css
@@ -3,11 +3,11 @@
 /* Please ❤ this if you like it! */
 
 
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
+/* @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext'); */
 
 /* #Primary
 ================================================== */
-
+/*
 body{
     font-family: 'Poppins', sans-serif;
 	font-size: 16px;
@@ -29,7 +29,7 @@ body{
 ::-moz-selection {
 	color: #fff;
 	background-color: #8167a9;
-}
+} */
 
 
 /* #Navigation
@@ -453,7 +453,7 @@ body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /* #Media
 ================================================== */
 
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
 	h1{
 		font-size: 38px;
 	}
@@ -509,4 +509,4 @@ body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 		background-color: transparent;
 		box-shadow: none;
 	}
-}
+} */
