--- a/blog_app/templates/blog_app/login.html
+++ b/blog_app/templates/blog_app/login.html
@@ -30,5 +30,7 @@
             <!-- <a class="btn-signin">Sign in</a> -->
           </div>
 				        </form>
-
+</div>
+</div>
+</div>
 {% endblock %}
