--- a/blog_app/templates/blog_app/base.html
+++ b/blog_app/templates/blog_app/base.html
@@ -28,52 +28,59 @@
 
   </head>
   <body>
-<body class="hero-anime">
-	<div class="navigation-wrap bg-light start-header start-style">
-		<div class="container">
+
+	<!-- <div class="navigation-wrap bg-light start-header start-style"> -->
+		<!-- <div class="container"> -->
 			<div class="row">
 				<div class="col-12">
-					<nav class="navbar navbar-expand-md navbar-light">
+          <nav class="navbar navbar-expand-md navbar-light">
 
-						<a class="navbar-brand" href="https://themeforest.net/user/ig_design/portfolio" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/logo.svg" alt=""></a>
+            <a class="navbar-brand"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/logo.svg" alt="" width="50" height="50" class="d-inline-block align-top"></a>
+            <strong><a class="navbar-brand" id="logo"href="#">REDDIT_V2.0</a></strong>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon"></span>
-						</button>
-
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							<ul class="navbar-nav ml-auto py-4 py-md-0">
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-									<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Home</a>
-									<div class="dropdown-menu">
-										<a class="dropdown-item" href="{%url 'about' %}">About</a>
-										<a class="dropdown-item" href="#">Something else here</a>
-										<a class="dropdown-item" href="#">Another action</a>
-									</div>
-								</li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-									<a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
-								</li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-									<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
-									<div class="dropdown-menu">
-										<a class="dropdown-item" href="https://github.com/prajvalsudhir">Github</a>
-										<a class="dropdown-item" href="https://in.linkedin.com/in/prajval-sudhir-571833185">LinkedIn</a>
-										<a class="dropdown-item" href="#">Something else here</a>
-										<a class="dropdown-item" href="#">Another action</a>
-									</div>
-								</li>
-                {% if user.is_authenticated %}
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-									<a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
-								</li>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto py-4 py-md-0">
                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-              <!-- user object which is automatically created is given as primary key(pk) to get the individual user posts -->
-                  <a class="nav-link" href="{%url 'Ulist' pk=user.pk%}">My Posts</a>
+                  <div class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      HOME
+                    </a>
+                      <div class="dropdown-menu" aria-labelledby="navbar-dropdown-menu">
+                    <a class="dropdown-item" href="{%url 'about' %}">About</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                  </div>
+                </div>
                 </li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-								<a class="nav-link" href="{% url 'user_logout' %}">Logout</a>
-								</li>
+                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+                  <a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
+                </li>
+                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                  <div class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Contact
+                    </a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="https://github.com/prajvalsudhir">Github</a>
+                    <a class="dropdown-item" href="https://in.linkedin.com/in/prajval-sudhir-571833185">LinkedIn</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                  </div>
+                </div>
+                </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+                  <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
+                </li>
+                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+                  <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
+                </li>
+                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+                <a class="nav-link" href="{% url 'user_logout' %}">Logout</a>
+                </li>
                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
                 <strong><a class="nav-link" >Welcome: {{ user.username }}</a></strong>
                 </li>
@@ -85,16 +92,16 @@
                   <a class="nav-link" href="{% url 'user_login' %}" aria-label="Login">Login</a>
                   </li>
                 {% endif %}
-							</ul>
-						</div>
+              </ul>
+            </div>
 
-					</nav>
+          </nav>
 				</div>
 			</div>
 		</div>
 	</div>
 
-</body>
+
 
 
 
