--- a/blog_app/templates/blog_app/about.html
+++ b/blog_app/templates/blog_app/about.html
@@ -1,11 +1,142 @@
-{% extends 'blog_app/base.html'%}
+{#% extends 'blog_app/base.html'%#}
 
 
 {% block body_block %}
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<!-- #####navbar##### -->
+
+<div class="row">
+  <div class="col-12">
+    <nav class="navbar navbar-expand-md navbar-light">
+
+      <a class="navbar-brand"><img src="https://user-images.githubusercontent.com/33750251/59486444-3699ab80-8e71-11e9-9f9a-836e431dcbfd.png" alt="" width="50" height="50" class="d-inline-block align-top"></a>
+      <strong><a class="navbar-brand" id="logo"href="#">REDDIT_V2.0</a></strong>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto py-4 py-md-0">
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <div class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                HOME
+              </a>
+                <div class="dropdown-menu" aria-labelledby="navbar-dropdown-menu">
+              <a class="dropdown-item" href="{%url 'about' %}">About</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Another action</a>
+            </div>
+          </div>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+            <div class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Contact
+              </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="https://github.com/prajvalsudhir">Github</a>
+              <a class="dropdown-item" href="https://in.linkedin.com/in/prajval-sudhir-571833185">LinkedIn</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Another action</a>
+            </div>
+          </div>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+          <a class="nav-link" href="{% url 'user_logout' %}">Logout</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+          <strong><a class="nav-link" >Welcome: {{ user.username }}</a></strong>
+          </li>
+          {% else %}
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{% url 'user_login' %}" aria-label="Login">Login</a>
+            </li>
+          {% endif %}
+        </ul>
+      </div>
+
+    </nav>
+  </div>
+</div>
+<!-- ########################### -->
+
+<!-- ################carousel############### -->
+
+<div class="container">
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://images.alphacoders.com/212/thumb-1920-212643.jpg" class="d-block w-100" alt="Chania" height="600px">
+      <div class="carousel-caption">
+        <strong><h3>Reddit V2</h3>
+        <p>Welcome to the best Reddit ever!</p></strong>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img class="d-block w-100" height="600px" src="https://i.redd.it/roui81b53sg01.jpg" alt="Chicago">
+      <div class="carousel-caption">
+        <h3>Witcher 3</h3>
+        <p>Best game ever</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img class="d-block w-100" height="600px" src="https://www.ecopetit.cat/wpic/mpic/16-163178_yamaha-r1-2013-model.jpg" alt="New York">
+      <div class="carousel-caption">
+        <h3>BIKES</h3>
+        <p>Best show ever</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+     <span class="sr-only">Previous</span>
+   </a>
+   <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+     <span class="sr-only">Next</span>
+   </a>
+</div>
+
+<!-- ################carousel############### -->
+
 <div class="jumbotron">
-  <h1 class="display-3">REDDIT V2.0</h1>
+  <h1 class="display-5">REDDIT V2.0</h1>
   <p class="lead">Welcome to the best Reddit ever!</p>
       <hr class="my-4">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
 </div>
 {% endblock %}
