--- a/blog_app/templates/blog_app/post_detail.html
+++ b/blog_app/templates/blog_app/post_detail.html
@@ -19,6 +19,13 @@
    <!-- add a filter to the post so that only the text content is displayed(because of the medium functionality) -->
     <p class='postcontent' >{{ post.text|safe|linebreaksbr }}</p>
 
+  <div class="row">
+  <div class="col-lg-4 col-6">
+  <!-- the images are automatically retreived from the meda folder according to the post -->
+    <img src="{{post.photos.url}}" alt="" height="400" width="640">
+     <hr>
+    </div>
+  </div>
     <!-- only the post creators can edit the posts -->
     {%if user.is_authenticated and user.username == post.creator %}
 
@@ -28,7 +35,7 @@
      {% endif %}
 
 <hr>
-<a class="btn btn-primary btn-comment" href="{% url 'add_comment' pk=post.pk %}">AddComment</a>
+<a class="btn btn-primary btn-comment float-right" href="{% url 'add_comment' pk=post.pk %}">AddComment</a>
 
 <div class="container">
 
