--- a/blog_app/templates/blog_app/post_detail.html
+++ b/blog_app/templates/blog_app/post_detail.html
@@ -35,7 +35,11 @@
      {% endif %}
 
 <hr>
+{% if user.is_authenticated%}
 <a class="btn btn-primary btn-comment float-right" href="{% url 'add_comment' pk=post.pk %}">AddComment</a>
+{% else %}
+<a class="btn btn-primary btn-comment float-right" href="{% url 'user_login' %}">login to AddComment</a>
+{%endif%}
 
 <div class="container">
 
