--- a/blog_app/templates/blog_app/base.html
+++ b/blog_app/templates/blog_app/base.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>REDDIT_2.0</title>
+    <title>Blueddit</title>
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -11,7 +11,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
       <!-- custom css -->
-    <link rel="stylesheet" href="{% static "css/blog.css" %}">
+    <link rel="stylesheet" href="{% static 'css/new.css'%}">
     <!-- <link rel="stylesheet" href="C:\Users\prajv\Desktop\PycharmProjects\PS-PY\venv\djenv\blog_pro\blog_app\static\css\blog.css"> -->
 
     <!-- custom js -->
@@ -31,75 +31,70 @@
 
 	<!-- <div class="navigation-wrap bg-light start-header start-style"> -->
 		<!-- <div class="container"> -->
-			<div class="row">
-				<div class="col-12">
-          <nav class="navbar navbar-expand-md navbar-light">
+    <header>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <img class="logo" src="https://lh3.googleusercontent.com/proxy/N_iBFGSGeB6w0fyGeJBVykihB--riEM1HXR6Vu6WG7i5iYBW5I3lTtSCCp40lNYd0TWoliC-uRFL2O0AKd1eZ51m4T6FcUWHEk4PRF40NYRW4WzK6z30beY" alt="">
+    <a class="navbar-brand" href="{%url 'about'%}">Blueddit</a>
+    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="navbarCollapse" style="">
+        <ul class="navbar-nav ml-auto py-4 py-md-0">
 
-            <a class="navbar-brand"><img src="https://user-images.githubusercontent.com/33750251/59486444-3699ab80-8e71-11e9-9f9a-836e431dcbfd.png" alt="" width="50" height="50" class="d-inline-block align-top"></a>
-            <strong><a class="navbar-brand" id="logo"href="#">REDDIT_V2.0</a></strong>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto py-4 py-md-0">
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                  <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      HOME
-                    </a>
-                      <div class="dropdown-menu" aria-labelledby="navbar-dropdown-menu">
-                    <a class="dropdown-item" href="{%url 'about' %}">About</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                  </div>
-                </div>
-                </li>
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                  <a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
-                </li>
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                  <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Contact
-                    </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="https://github.com/prajvalsudhir">Github</a>
-                    <a class="dropdown-item" href="https://in.linkedin.com/in/prajval-sudhir-571833185">LinkedIn</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                  </div>
-                </div>
-                </li>
-                {% if user.is_authenticated %}
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                  <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
-                </li>
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                  <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
-                </li>
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                <a class="nav-link" href="{% url 'user_logout' %}">Logout</a>
-                </li>
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                <strong><a class="nav-link" >Welcome: {{ user.username }}</a></strong>
-                </li>
-                {% else %}
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                  <a class="nav-link" href="{% url 'register' %}">Register</a>
-                  </li>
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                  <a class="nav-link" href="{% url 'user_login' %}" aria-label="Login">Login</a>
-                  </li>
-                {% endif %}
-              </ul>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <div class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                HOME
+              </a>
+                <div class="dropdown-menu" aria-labelledby="navbar-dropdown-menu">
+              <a class="dropdown-item" href="{%url 'about' %}">About</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Another action</a>
             </div>
+          </div>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+            <div class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Contact
+              </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="https://github.com/prajvalsudhir">Github</a>
+              <a class="dropdown-item" href="https://in.linkedin.com/in/prajval-sudhir-571833185">LinkedIn</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Another action</a>
+            </div>
+          </div>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+          <a class="nav-link" href="{% url 'user_logout' %}">Logout</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+          <strong><a class="nav-link" >Welcome: {{ user.username }}</a></strong>
+          </li>
+          {% else %}
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+            <a class="nav-link" href="{% url 'user_login' %}" aria-label="Login">Login</a>
+            </li>
+          {% endif %}
+      </ul>
 
-          </nav>
-				</div>
-			</div>
-		</div>
-	</div>
+    </div>
+  </nav>
+</header>
 
 
 
@@ -120,5 +115,15 @@
         </div>
 
 
+        <!-- FOOTER -->
+        <footer class="container">
+          <p class="float-right"><a href="#">Back to top</a></p>
+          <p>© Website created and owned by <a href="https://in.linkedin.com/in/prajval-sudhir-571833185">Prajval</a> · <a href="#">Terms</a></p>
+        </footer>
+      </main>
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+            <script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/docs/4.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+
+    
   </body>
 </html>
