--- a/blog_app/templates/blog_app/login.html
+++ b/blog_app/templates/blog_app/login.html
@@ -23,7 +23,7 @@
 <!-- navbar code -->
 <header>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-<img class="logo" src="https://lh3.googleusercontent.com/proxy/N_iBFGSGeB6w0fyGeJBVykihB--riEM1HXR6Vu6WG7i5iYBW5I3lTtSCCp40lNYd0TWoliC-uRFL2O0AKd1eZ51m4T6FcUWHEk4PRF40NYRW4WzK6z30beY" alt="">
+  <img class="logo"src="{% static 'images/reddit.png'%}" alt="">
 <a class="navbar-brand" href="{%url 'about'%}">Blueddit</a>
 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
