--- a/blog_app/templates/blog_app/post_detail.html
+++ b/blog_app/templates/blog_app/post_detail.html
@@ -1,8 +1,10 @@
 {% extends 'blog_app/base.html'%}
-
+{%load static%}
 
 {% block body_block %}
-
+{% load tz %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="/w3css/4/w3.css">
 <h2 class="display-5">{{post.title}}</h2>
 
   {% if post.published_date %}
@@ -16,14 +18,43 @@
           <a class="btn btn-outline-dark" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
 
     {%endif%}
+
+
+
    <!-- add a filter to the post so that only the text content is displayed(because of the medium functionality) -->
     <p class='postcontent' >{{ post.text|safe|linebreaksbr }}</p>
-
   <div class="row">
   <div class="col-lg-4 col-6">
   <!-- the images are automatically retreived from the meda folder according to the post -->
     <img src="{{post.photos.url}}" alt="" height="400" width="640">
+
+
+
+<!-- Likes button -->
      <hr>
+ <form class="" action="{% url 'like_post' post.pk %}" method="POST">
+   {% csrf_token %}
+
+      <!-- <a href="#" type="submit" name='post_id'><svg class="bi bi-heart-fill" width="50px" height="50px"  viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" clip-rule="evenodd"/>
+    </svg></a>You liked this post. -->
+    <!-- <svg class="bi bi-heart" width="50px" height="50px" viewBox="0 0 16 16"  fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 01.176-.17C12.72-3.042 23.333 4.867 8 15z" clip-rule="evenodd"/>
+    </svg> -->
+
+    {% if user.is_authenticated %}
+  <button type="submit" name='post_id' value="{{ post.id }}" class="fa fa-thumbs-up w3-hover-text-indigo" style="font-size: 45px;cursor: pointer;color:blue; padding:0;border:none;background:none;"></button>{{total_likes}} people like this post
+   {% else %}
+
+ <a class="btn btn-primary btn-comment float-left" href="{% url 'user_login' %}">login to Like post</a>
+
+   {% endif %}
+ </form>
+
+
+<!-- ############### -->
+
+
     </div>
   </div>
     <!-- only the post creators can edit the posts -->
