--- a/blog_app/templates/blog_app/post_form.html
+++ b/blog_app/templates/blog_app/post_form.html
@@ -6,6 +6,7 @@
 
   <form method="POST" class="post-form" name="form" enctype="multipart/form-data">
   {% csrf_token %}
+  <h3>Author ID<input readonly class="form-control" type="number" name="author" value="{{user.id}}"></h3>
   <h3>Creator<input readonly class="form-control" type="text" name="creator" value="{{user.username}}"></h3>
   <h3>Title<input class="form-control" type="text" name="title"></h3>
   <!-- <h3>Text<input class="form-control" type="text" name="text"></h3> -->
