--- a/blog_app/templates/blog_app/registration.html
+++ b/blog_app/templates/blog_app/registration.html
@@ -6,12 +6,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Register</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+</head>
 
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{% static "css/login.css"%}">
@@ -22,68 +22,69 @@
 
 <!-- ### navbar code## -->
 <header>
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <img class="logo"src="{% static 'images/reddit.png'%}" alt="">
-<a class="navbar-brand" href="{%url 'about'%}">Blueddit</a>
-<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-</button>
-<div class="navbar-collapse collapse" id="navbarCollapse" style="">
-    <ul class="navbar-nav ml-auto py-4 py-md-0">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+    <img class="logo"src="{% static 'images/reddit.png'%}" alt="">
+    <a class="navbar-brand" href="{% url 'about' %}">Blueddit</a>
+    <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="navbarCollapse" style="">
 
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-        <div class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            HOME
-          </a>
-            <div class="dropdown-menu" aria-labelledby="navbar-dropdown-menu">
-          <a class="dropdown-item" href="{%url 'about' %}">About</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <a class="dropdown-item" href="#">Another action</a>
-        </div>
-      </div>
-      </li>
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-        <a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
-      </li>
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-        <div class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Contact
-          </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="https://github.com/prajvalsudhir">Github</a>
-          <a class="dropdown-item" href="https://in.linkedin.com/in/prajval-sudhir-571833185">LinkedIn</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <a class="dropdown-item" href="#">Another action</a>
-        </div>
-      </div>
-      </li>
-      {% if user.is_authenticated %}
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-        <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
-      </li>
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-        <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
-      </li>
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-      <a class="nav-link" href="{% url 'user_logout' %}">Logout</a>
-      </li>
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-      <strong><a class="nav-link" >Welcome: {{ user.username }}</a></strong>
-      </li>
-      {% else %}
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-        <a class="nav-link" href="{% url 'register' %}">Register</a>
-        </li>
-      <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-        <a class="nav-link" href="{% url 'user_login' %}" aria-label="Login">Login</a>
-        </li>
-      {% endif %}
-  </ul>
+        <ul class="navbar-nav ml-auto py-md-0">
 
-</div>
-</nav>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <div class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                HOME
+              </a>
+                <div class="dropdown-menu" aria-labelledby="navbar-dropdown-menu">
+              <a class="dropdown-item" href="{%url 'about' %}">About</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Another action</a>
+            </div>
+          </div>
+          </li>
+            <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
+          </li>
+              <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <div class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Contact
+              </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="https://github.com/prajvalsudhir">Github</a>
+              <a class="dropdown-item" href="https://in.linkedin.com/in/prajval-sudhir-571833185">LinkedIn</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Another action</a>
+            </div>
+          </div>
+          </li>
+          {% if user.is_authenticated %}
+              <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
+          </li>
+            <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
+          </li>
+            <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+          <a class="nav-link" href="{% url 'user_logout' %}">Logout</a>
+          </li>
+            <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+          <strong><a class="nav-link" >Welcome: {{ user.username }}</a></strong>
+          </li>
+          {% else %}
+              <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+              <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <a class="nav-link" href="{% url 'user_login' %}" aria-label="Login">Login</a>
+            </li>
+          {% endif %}
+      </ul>
+
+    </div>
+  </nav>
 </header>
 <!-- ######## -->
 
@@ -116,10 +117,10 @@
           {%endif%}
 
           <!-- FOOTER -->
-          <footer class="container">
+          <!-- <footer class="container">
             <p class="float-right"><a href="#">Back to top</a></p>
             <p>© 2017-2019 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-          </footer>
+          </footer> -->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
               <script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/docs/4.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
 
