--- a/blog_app/templates/blog_app/base.html
+++ b/blog_app/templates/blog_app/base.html
@@ -44,7 +44,7 @@
 
             <ul class="navbar-nav ml-auto py-md-0">
 
-              <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+              <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
                 <div class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     HOME
@@ -55,9 +55,9 @@
                   <a class="dropdown-item" href="#">Another action</a>
                 </div>
               </div>
-              </li>
+              </li> -->
                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
-                <a class="nav-link" href="{% url 'post_list'%}">FEED</a>
+                <a class="nav-link" href="{% url 'post_list'%}">Main Feed</a>
               </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
                 <div class="nav-item dropdown">
@@ -73,12 +73,28 @@
               </div>
               </li>
               {% if user.is_authenticated %}
+
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
                 <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
               </li>
-                <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
-                <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
+              <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <a class="nav-link" href="{% url 'follow_user' %}">Follow users</a>
               </li>
+
+              <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+            <div class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                POSTS
+              </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'follow_post'%}">Following Posts</a>
+              <a class="dropdown-item" href="{%url 'Ulist' %}">My Posts</a>
+            </div>
+            </div>
+            </li>
+                <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+                <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
+              </li> -->
                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
               <a class="nav-link" href="{% url 'user_logout' %}">Logout</a>
               </li>
