--- a/blog_app/templates/blog_app/fol_post.html
+++ b/blog_app/templates/blog_app/fol_post.html
@@ -8,10 +8,11 @@
  {% for post in post_list%}
    <!-- in url tagging no need to specify the app name as all the links for the views are through the urls in blog_app -->
    <!-- specify the pk so that the respective post_detail is displayed -->
-   {% if user.username == post.creator %}
+   {% if post.author in fol_list %}
    <h2><a class="list_link" href="{% url 'post_detail' pk=post.pk%}">{{post.title}}</a></h2>
    <div class="date">
      <p>Created on: {{post.create_date|date:"D M Y"}}</p>
+     <p>Creator:{{post.creator}}</p>
    </div>
    <div>
      <!-- here for the Comments the approve_comments method is called and count attribute is applied so that it displays the no of comments for each post -->
