--- a/blog_app/templates/blog_app/login.html
+++ b/blog_app/templates/blog_app/login.html
@@ -31,21 +31,8 @@
     <div class="navbar-collapse collapse" id="navbarCollapse" style="">
 
         <ul class="navbar-nav ml-auto py-md-0">
-
-          <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
-            <div class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                HOME
-              </a>
-                <div class="dropdown-menu" aria-labelledby="navbar-dropdown-menu">
-              <a class="dropdown-item" href="{%url 'about' %}">About</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-              <a class="dropdown-item" href="#">Another action</a>
-            </div>
-          </div>
-          </li>
             <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
-            <a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
+            <a class="nav-link" href="{% url 'post_list'%}">FEED</a>
           </li>
               <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
             <div class="nav-item dropdown">
@@ -63,6 +50,9 @@
           {% if user.is_authenticated %}
               <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
             <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+        <a class="nav-link" href="{% url 'follow_user' %}">Follow users</a>
           </li>
             <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
             <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
