--- a/blog_app/templates/blog_app/registration.html
+++ b/blog_app/templates/blog_app/registration.html
@@ -6,8 +6,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Register</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -32,18 +32,6 @@
 
         <ul class="navbar-nav ml-auto py-md-0">
 
-          <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
-            <div class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" href="#" id="navbar-dropdown-menu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                HOME
-              </a>
-                <div class="dropdown-menu" aria-labelledby="navbar-dropdown-menu">
-              <a class="dropdown-item" href="{%url 'about' %}">About</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-              <a class="dropdown-item" href="#">Another action</a>
-            </div>
-          </div>
-          </li>
             <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
             <a class="nav-link" href="{% url 'post_list'%}">POSTS</a>
           </li>
@@ -63,6 +51,9 @@
           {% if user.is_authenticated %}
               <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
             <a class="nav-link" href="{% url 'post_create' %}">NewPost</a>
+          </li>
+          <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
+        <a class="nav-link" href="{% url 'follow_user' %}">Follow users</a>
           </li>
             <li class="nav-item pl-4 pl-md-0 ml-0 ml-lg-4 active">
             <a class="nav-link" href="{%url 'Ulist' %}">My Posts</a>
